src/objects/Basic_Guide_to_Exporting__kav.object
<CustomObject><fields>
        <fullName>Approval_Queue__c</fullName>
        <description>This field ties to Approval Queues.</description>
        <inlineHelpText>Select the approval queue for this Article.</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Global Markets</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Atom Approver</description>
        <inlineHelpText>Atom Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Basic_Guide_to_Exporting</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is where the body of your content should be placed. The content should not deviate from the overall theme and should stand on its own as a reliable source of information. Otherwise, a new topic should be created.</inlineHelpText>
        <label>Atom</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box, if your document is ready to go into workflow. If you're completely satisfied with your draft, then click "Submit for Approval" button.</description>
        <inlineHelpText>Flag the draft version is ready for approval</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Level_0__c</fullName>
        <description>Hidden field for KM streamline effort.</description>
        <inlineHelpText>Select the Level 0 section for this series.</inlineHelpText>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Guide to Exporting</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_1__c</fullName>
        <inlineHelpText>Select the Level 1 section for this series.</inlineHelpText>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Export Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing a Marketing Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methods and Channels for Exporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finding Qualified Buyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Licensing and Joint Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing your Product for Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Legal Considerations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Exporting Tools for Small Businesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Your Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing, Quotation and Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methods of Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Export Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Travel Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Overseas and Aftersales Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules of Origin for FTAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glossary of Trade Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_2__c</fullName>
        <description>Select the Level 2 section for this series.</description>
        <inlineHelpText>Select the Level 2 section for this series.</inlineHelpText>
        <label>Level 2</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Why Companies Should Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Why Small Companies Don’t Export to More Than One Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Reasons to Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defeet International: Success Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do I need a license?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determine a Products Export Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Export Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Plan Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methods of Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sources of Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Story: Zeigler Brothers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local US Commercial Service Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Commercial Service Offices Overseas Posts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Trade and Development Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export-Import Bank of the US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-export Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-export Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The US Commercial Service Advocacy Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Agreeements Negotiations and Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bureau of Industry and Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Business Development Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Small Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCORE - Counselors to America's Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Department of Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Center for Standards and Certifications Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Export Councils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local Governments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Intermediaries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mobile_Title__c</fullName>
        <description>Mobile title - Displays as the title in Mobile/Tablet View</description>
        <inlineHelpText>Title of the article in Mobile/Tablet View</inlineHelpText>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_URL__c</fullName>
        <description>Full Public URL for Article</description>
        <formula>HYPERLINK($Label.export_gov&amp;"/article?id="&amp;UrlName, $Label.export_gov&amp;"/article?id="&amp;UrlName)</formula>
        <label>Public URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>References__c</fullName>
        <description>Article references</description>
        <inlineHelpText>If there are any references that were used during the writing of the content, they can be highlighted here. The rich text editor allows for formatting and link creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Creates relationship to Series</description>
        <inlineHelpText>Type Basic Guide to Exporting in this field.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Basic Guide to Exporting</value>
            </filterItems>
            <infoMessage>Type in Basic Guide to Exporting</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Basic Guides to Exporting</relationshipLabel>
        <relationshipName>Basic_Guides_to_Exporting</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft: Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Basic Guide to Exporting</relationshipLabel>
        <relationshipName>Basic_Guide_to_Exporting</relationshipName>
        <type>Lookup</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Basic Guide to Exporting Template</description><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><label>Basic Guide to Exporting</label><pluralLabel>Basic Guide to Exporting</pluralLabel><validationRules>
        <fullName>Required_Level_1</fullName>
        <active>false</active>
        <description>Level 1 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_1__c))</errorConditionFormula>
        <errorMessage>Please pick Level 1 (Mandatory field)</errorMessage>
    </validationRules><validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules></CustomObject>